--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -7,15 +7,13 @@
     </head>
 
     <div class="topnav">
-        <!--<a class="active" href="#navbar">Navbar</a>-->
         <a href="index.html">HOME</a>
-
     </div>
 
     <body>
         <div class="glass-container">
             <div class="login-box">
-                <h2>Login</h2>
+                <h2>Welcome Back!</h2>
                 <form action="#" method="POST">
                     <input type="text" id="user" name="username" required placeholder="Enter Username">
                     <input type="password" id="password" name="password" required placeholder="Enter Password">
@@ -27,7 +25,7 @@
                     </div>
 
                     <button type="submit">Login</button>
-                    <p>Not registered? <a href="signup.hmtl" id="register">Create an account</a></p>
+                    <p>Not registered? <a href="signup.html" id="register">Create an account</a></p>
                 </form>
             </div>
         </div>
