--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Sign Up</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>Signup</title>
+        <link rel="stylesheet" href="login.css">
+        <link rel="shortcut icon" type="image/jpg" href="tent.jpg" rel="icon" type="image/x-icon">
     </head>
 
+    <div class="topnav">
+        <a href="index.html">HOME</a>
+
+    </div>
+
+    <body>
+        <div class="glass-container">
+            <div class="login-box">
+                <h2>Create an Account</h2>
+                <form action="#" method="POST">
+                    <input type="text" id="user" name="username" required placeholder="Enter a Username">
+                    <input type="password" id="password" name="password" required placeholder="Enter a Password">
+
+                    <div class="options">
+                        <input type="checkbox" id="remember" name="remember">
+                        <label for="remember">Remember Me?</label>
+                    </div>
+
+                    <button type="submit">Login</button>
+                    <p>Have an account? <a href="login.html" id="register">Login</a></p>
+                </form>
+            </div>
+        </div>
+    </body>
     
