Small color changes and wordings for headers

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -3,15 +3,14 @@
     <head>
         <title>Signup</title>
         <link rel="stylesheet" href="login.css">
-        <link rel="shortcut icon" type="image/jpg" href="tent.jpg" rel="icon" type="image/x-icon">
+        <link rel="shortcut icon" type="image/jpg" href="tent_icon.jpg" rel="icon" type="image/x-icon">
     </head>
 
     <div class="topnav">
         <a href="index.html">HOME</a>
-
     </div>
 
-    <body>
+    <body style="background-image: url(forestbg.jpg); background-size: cover">
         <div class="glass-container">
             <div class="login-box">
                 <h2>Create an Account</h2>
