--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,10 +14,11 @@
         </div>
 
         <div style="text-align: center; margin-top: 90px">
-            <h1 style="font-size:65px; color:rgb(88, 65, 49); ">Trailblaze the Wilderness</h1>
-            <h3 style="font-size:35px; text-align:center; color: rgba(88, 65, 49, 0.88);"><em>Ready to Camp? Connect with Fellow Adventurers!</em></h3>
+            <h2 style="font-size: 65px; color: rgb(88, 65, 49); ">Trailblaze the Wilderness</h1>
+            <h3 style="font-size: 35px; text-align: center; color: rgba(88, 65, 49, 0.88)"><em>Ready to Camp? Connect with Fellow Adventurers!</em></h3>
         </div>
-
     </body>
+
+    <p style="font-weight:bolder; font-size: 17px; text-align: right; position: relative; top: 400px; color: rgba(143, 114, 94, 0.916)">@ 2025 CampNet_</p>
 
 </html>
