--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -3,17 +3,17 @@
     <head>
         <title>Login</title>
         <link rel="stylesheet" href="login.css">
-        <link rel="shortcut icon" type="image/jpg" href="tent.jpg" rel="icon" type="image/x-icon">
+        <link rel="shortcut icon" type="image/jpg" href="tent_icon.jpg" rel="icon" type="image/x-icon">
     </head>
 
     <div class="topnav">
         <a href="index.html">HOME</a>
     </div>
 
-    <body>
+    <body style="background-image: url(forestbg.jpg); background-size: cover">
         <div class="glass-container">
             <div class="login-box">
-                <h2>Welcome Back!</h2>
+                <h2>Welcome Back Camper!</h2>
                 <form action="#" method="POST">
                     <input type="text" id="user" name="username" required placeholder="Enter Username">
                     <input type="password" id="password" name="password" required placeholder="Enter Password">
