--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -8,7 +8,6 @@
 
     <div class="topnav">
         <a href="index.html">HOME</a>
-
     </div>
 
     <body>
@@ -30,4 +29,5 @@
             </div>
         </div>
     </body>
+</html>
     
