Functional Log Out button added contacts.html
Added LogOut button linked with code.js, seems to work fine

--- a/Frontend/contacts.html
+++ b/Frontend/contacts.html
@@ -8,7 +8,7 @@
         <!---Links the CSS file -->
         <link rel="stylesheet" href="contacts.css">
         <!--Links the javascript file -->
-        <script src="js/code.js"></script>
+        <script src="code.js"></script>
     </head>
 
     <body style="background-color: #e2c4aaeb">
@@ -20,6 +20,7 @@
                 <input onkeyup="searchContacts()" type="text" id="searchText" placeholder="Search...">
                 <button type="button" id="searchButton" onclick="searchContacts();">Search</button>
             </div>
+            <button type="button" id="logoutButton" onclick="doLogout();">LogOut</button>
 
             <!-- Add Contact -->
             <div class="addContact">
