--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script src="code.js"></script>
     <head>
         <title>Login</title>
         <link rel="stylesheet" href="login.css">
@@ -24,10 +25,11 @@
                         <a href="#">Forgot Password?</a>
                     </div>
 
-                    <button type="submit">Login</button>
+                    <button type="submit"onclick="doLogin();">Login</button>
                     <p>Not registered? <a href="signup.html" id="register">Create an account</a></p>
                 </form>
             </div>
         </div>
     </body>
+    
     
