Update, fixed some naming error and now calls signup function on click signup.html

--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script src="code.js"></script>
     <head>
         <title>Signup</title>
         <link rel="stylesheet" href="login.css">
@@ -23,7 +24,7 @@
                         <label for="remember">Remember Me?</label>
                     </div>
 
-                    <button type="submit">Login</button>
+                    <button type="submit" onclick="doSignup();">Sign Up</button>
                     <p>Have an account? <a href="login.html" id="register">Login</a></p>
                 </form>
             </div>
