--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -16,8 +16,9 @@
             <div class="login-box">
                 <h2>Welcome Back!</h2>
                 <form action="#" method="POST">
-                    <input type="text" id="user" name="username" required placeholder="Enter Username">
-                    <input type="password" id="password" name="password" required placeholder="Enter Password">
+                    <input type="text" id="loginName" name="username" required placeholder="Enter Username">
+                    <input type="password" id="loginPassword" name="password" required placeholder="Enter Password">
+                    <span id="loginResult"></span>
 
                     <div class="options">
                         <input type="checkbox" id="remember" name="remember">
@@ -25,7 +26,7 @@
                         <a href="#">Forgot Password?</a>
                     </div>
 
-                    <button type="submit"onclick="doLogin();">Login</button>
+                    <button type="button"onclick="doLogin();">Login</button>
                     <p>Not registered? <a href="signup.html" id="register">Create an account</a></p>
                 </form>
             </div>
