--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -16,15 +16,16 @@
             <div class="login-box">
                 <h2>Create an Account</h2>
                 <form action="#" method="POST">
-                    <input type="text" id="user" name="username" required placeholder="Enter a Username">
-                    <input type="password" id="password" name="password" required placeholder="Enter a Password">
+                    <input type="text" id="signupUsername" name="username" required placeholder="Enter a Username">
+                    <input type="password" id="signupPassword" name="password" required placeholder="Enter a Password">
+                     <span id="signupResult"></span>
 
                     <div class="options">
                         <input type="checkbox" id="remember" name="remember">
                         <label for="remember">Remember Me?</label>
                     </div>
 
-                    <button type="submit" onclick="doSignup();">Sign Up</button>
+                    <button type="button" onclick="doSignup();">Sign Up</button>
                     <p>Have an account? <a href="login.html" id="register">Login</a></p>
                 </form>
             </div>
