--- a/Frontend/contacts.html
+++ b/Frontend/contacts.html
@@ -13,12 +13,12 @@
 
     <body style="background-color: #e2c4aaeb">
         <h1 style="position: absolute; margin-bottom: 600px; color: rgb(88, 65, 49)">CamperNet Contacts</h1>
-        <p style="position: absolute; margin-bottom: 500px; color: rgb(88, 65, 49); font-size: 16px">Please Enter the Following Information</p>
+        <p style="position: absolute; margin-bottom: 500px; color: rgb(88, 65, 49); font-size: 20px">Please Enter the Following Information</p>
         <div class="content">
             <div class="search-container">
                 <!-- Search functionality Implementation needed -->
                 <input onkeyup="searchContacts()" type="text" id="searchText" placeholder="Search...">
-                <button type="button" id="searchButton" onclick="searchContacts();">Search</button>
+                <button type="button" id="searchButton" onclick="searchContacts()">Search</button>
             </div>
             <button type="button" id="logoutButton" onclick="doLogout();">LogOut</button>
 
