--- a/swagger/index.html
+++ b/swagger/index.html
@@ -183,7 +183,7 @@
     <div class="app-desc">More information: <a href="https://helloreverb.com">https://helloreverb.com</a></div>
     <div class="app-desc">Contact Info: <a href="jo430544@ucf.edu">jo430544@ucf.edu</a></div>
     <div class="app-desc">Version: 1.0.0</div>
-    <div class="app-desc">BasePath:/ucf-6d4/LAMPAPISS/1.0.0</div>
+    <div class="app-desc">BasePath:/LAMPAPI</div>
     <div class="license-info">Apache 2.0</div>
     <div class="license-url">http://www.apache.org/licenses/LICENSE-2.0.html</div>
   <h2>Access</h2>
