--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -17,7 +17,7 @@
                 <h2>Create an Account</h2>
                 <form action="#" method="POST">
                     <input type="text" id="signupFirstname" name="firstName" required placeholder="Enter your first Name">
-                    <input type="password" id="signupLastname" name="lastName" required placeholder="Enter your last Name">
+                    <input type="text" id="signupLastname" name="lastName" required placeholder="Enter your last Name">
                     <input type="text" id="signupUsername" name="username" required placeholder="Enter a Username">
                     <input type="password" id="signupPassword" name="password" required placeholder="Enter a Password">
                      <span id="signupResult"></span>
