--- a/Frontend/contacts.html
+++ b/Frontend/contacts.html
@@ -5,6 +5,7 @@
         <title>Contact Manager</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/jpg" href="tent.jpg" rel="icon" type="image/x-icon">
         <!---Links the CSS file -->
         <link rel="stylesheet" href="contacts.css">
         <!--Links the javascript file -->
@@ -13,12 +14,13 @@
 
     <body style="background-color: #e2c4aaeb">
         <h1 style="position: absolute; margin-bottom: 600px; color: rgb(88, 65, 49)">CamperNet Contacts</h1>
-        <p style="position: absolute; margin-bottom: 500px; color: rgb(88, 65, 49); font-size: 20px">Please Enter the Following Information</p>
+        <p style="position: absolute; margin-bottom: 500px; color: rgb(88, 65, 49); font-size: 16px">Please Enter the Following Information</p>
         <div class="content">
             <div class="search-container">
                 <!-- Search functionality Implementation needed -->
                 <input onkeyup="searchContacts()" type="text" id="searchText" placeholder="Search...">
-                <button type="button" id="searchButton" onclick="searchContacts()">Search</button>
+                <button type="button" id="searchButton" onclick="searchContacts();">Search</button>
+                <span id="searchResult"></span>
             </div>
             <button type="button" id="logoutButton" onclick="doLogout();">LogOut</button>
 
@@ -30,6 +32,7 @@
                     <input type="text" id="contactTextNumber" placeholder="###-###-####" required>
                     <input type="text" id="contactTextEmail" placeholder=" Username@email.com" required>
                     <button type="button" id="addContactButton" onclick="addContact();">Add Contact</button>
+                    <span id="contactResult"></span>
                 </form>
             </div>
         
